[gd_scene load_steps=4 format=3 uid="uid://cmr8vw5fn3k4a"]

[ext_resource type="Script" path="res://src/ui/ZoneSelectorUI.gd" id="1_zone_selector"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.4, 0.25, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.6, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.3, 0.2, 0.1, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.6, 0.3, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ZoneSelectorUI" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_zone_selector")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LeftArrow" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_colors/font_pressed_color = Color(1, 0.8, 0.4, 1)
theme_override_colors/font_hover_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
text = "‚óÑ"

[node name="ZonePanel" type="PanelContainer" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="ZoneLabel" type="Label" parent="CenterContainer/HBoxContainer/ZonePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 24
text = "üçΩÔ∏è Yemek Salonu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightArrow" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_colors/font_pressed_color = Color(1, 0.8, 0.4, 1)
theme_override_colors/font_hover_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
text = "‚ñ∫"
